--- a/Tugas3/style.css
+++ b/Tugas3/style.css
@@ -15,7 +15,7 @@ a {
 
 section {
     width: 100%;
-    height: 95vh;
+    height: 100vh;
     background: url('backround.jpg') no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
@@ -112,39 +112,8 @@ border-radius: 8px;
     top: 10%;
 }
 
-.scroll-down-arrow {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    animation: bounce 2s infinite;
-    cursor: pointer;
-}
-
-.scroll-down-arrow span {
-    display: block;
-    width: 24px;
-    height: 24px;
-    border: 2px solid #fff;
-    border-radius: 50%;
-    margin: 6px auto;
-    background-color: transparent;
-}
-
-@keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
-    }
-    40% {
-        transform: translateY(-10px);
-    }
-    60% {
-        transform: translateY(-5px);
-    }
-}
-
 .about-container {
-    width: 70%;
+    width: 80%;
     height: 330px;
     background-color: #a19e9e;
     border-radius: 20px;
@@ -203,7 +172,7 @@ border-radius: 8px;
     color: #ffffff;
     font-family: sans-serif;
     font-weight: bold;
-    font-size: 13px;
+    font-size: 19px;
     line-height: 5px;
 }
 
@@ -241,7 +210,7 @@ button:active {
 }
 
 .services {
-    height: 1000px;
+    height: 900px;
     background-color: #f81b1b;
     padding: 2% 10% 0 10%;
 }
@@ -353,6 +322,38 @@ button:active {
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+}
+
+.scroll-down-arrow {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: bounce 2s infinite;
+    cursor: pointer;
+    z-index: 999; /* Set z-index tinggi agar muncul di atas elemen lain */
+}
+
+.scroll-down-arrow span {
+    display: block;
+    width: 24px;
+    height: 24px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    margin: 6px auto;
+    background-color: transparent;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateY(-5px);
+    }
 }
         
 footer {
