--- a/Tugas3/style.css
+++ b/Tugas3/style.css
@@ -20,7 +20,6 @@ section {
     background-size: cover;
     background-attachment: fixed;
     position: relative;
-    
 }
 
 nav {
@@ -108,7 +107,7 @@ border-radius: 8px;
 
 .text-container {
     position: absolute;
-    left: 10%;
+    left: 16%;
     top: 10%;
 }
 
@@ -128,6 +127,8 @@ border-radius: 8px;
     justify-content: space-evenly;
     align-items: center;
 }
+
+
 .about-container2 {
     width: 80%;
     height: 330px;
@@ -144,7 +145,6 @@ border-radius: 8px;
     justify-content: space-evenly;
     align-items: center;
 }
-
 
 .about-container img {
     height: 250px;
@@ -197,8 +197,6 @@ border-radius: 8px;
     color: #030404;
     cursor: pointer;
     background-color: #524b4b;
-
-    
 }
 
 button:active {
@@ -325,9 +323,8 @@ button:active {
 }
 
 .scroll-down-arrow {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
+    padding-top: 150px;
+    position: relative;    
     transform: translateX(-50%);
     animation: bounce 2s infinite;
     cursor: pointer;
@@ -355,7 +352,7 @@ button:active {
         transform: translateY(-5px);
     }
 }
-        
+    
 footer {
     background-color: #000000;
     text-align: center;
